--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "expo-linear-gradient": "12.3.0",
-    "@expo/vector-icons": "13.0.0"
+    "@expo/vector-icons": "13.0.0",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0",
+    "typescript": "^5.1.3",
+    "@types/react": "~18.2.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
